# dotfiles

./: .gitignore  AGENTS.md  GLOBAL.md  LAUNCHER_COMPRESSION_GUIDE.md  LICENSE  MACHINE.md  MODELS.md  README.md  bootstrap.sh  configuration.nix  flake.nix  home.nix  rebuild.sh
.agents/: axi  cocoindex  cocoindex-code  code-review  codebase-design  domain-modeling  grill-me  implement  plan  plugin.json  prototype  research  simplify  to-tickets  triage  wayfinder
.agents/axi/: SKILL.md
.agents/cocoindex/: SKILL.md
.agents/cocoindex-code/: SKILL.md
.agents/code-review/: SKILL.md
.agents/codebase-design/: SKILL.md
.agents/domain-modeling/: SKILL.md
.tldr/: languages.json
agent-rules/: KNOWN_ISSUES.md  TOOL_REGISTRY.md
captain/: CLAUDE.md  GLOBAL.md  TEST_PLAN.md  agents.nix  permissions.nix  secrets.nix  services.nix  system.nix  user.nix
config/: agent-toolchain.tsv
docs/: ARCHITECTURE.md  DATA_PIPELINE.md  FILE_MANIFEST.md  HOOKS.md  NIX.md  SECRETS.md  SEPARATION_POLICY.md  VOICE_PIPELINE.md  agent-visibility-architecture.md  cocoindex-config.md  session-2026-07-14.md  theo-browne-ai-psychosis.md
home/: AGENTS.md  gitconfig
templates/: AGENTS-template.md
templates/python/: .pre-commit-config.yaml  Makefile  pyproject.toml
tests/: audit-hook-ownership.test.sh
tools/: brave-automation  cocoindex-global-settings.yml  cocoindex-project-settings.yml  cursor-login  tldr_chunker.py
wayfinder/: agent-toolchain-architecture-2026-07-23.md  deps.json  home-manager-activation-path-incident-2026-07-23.md  mlx-chat-parked-2026-07-23.md
(+116 files in other folders)
